# mcp-web-llm

./: .gitignore  LICENSE  MCP_Streaming_Support_Report.md  README.md  README_zh.md  USAGE.md  main.py  memory.py  pyproject.toml  server.py
.trae/specs/mcp-streaming-support-research/: checklist.md  spec.md  tasks.md
.trae/specs/mcp-web-llm-improvements/: checklist.md  spec.md  tasks.md
.trae/specs/session-memory-management/: checklist.md  spec.md  tasks.md
demo/: make_gif.py
models/: base.py  chatgpt.py  claude.py  deepseek.py  gemini.py  grok.py  qwen.py
