[project]
name = "mcp-web-llm"
version = "0.1.0"
description = "A Multi-LLM Aggregator MCP server that uses web automation to query ChatGPT, Claude, and Gemini without API keys or tokens."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mcp>=1.25.0",
    "playwright>=1.58.0",
]
